--- a/install
+++ b/install
@@ -3,14 +3,13 @@
 echo "Configuring ZSH as the default Shell"
 chsh -s /bin/zsh
 compaudit | xargs chmod g-w
-gconftool-2 -s /apps/metacity/general/num_workspaces --type int 5
 
 echo "Setting Solarized"
-bash $HOME/.zsh/lib/solarized/set_dark.sh
+bash $HOME/.config/zsh/lib/solarized/set_dark.sh
 
 echo "Creating all symbolic links for zsh"
-ln -sf $HOME/.zsh/init/.zshenv $HOME/ > /dev/null 2>&1
-ln -sf $HOME/.zsh/init/.zshrc $HOME/ > /dev/null 2>&1
+ln -sf $HOME/.config/zsh/init/.zshenv $HOME/ > /dev/null 2>&1
+ln -sf $HOME/.config/zsh/init/.zshrc $HOME/ > /dev/null 2>&1
 
 echo "Removing obsolete bash files"
 cd $HOME
